# malaysia-prayertimes

./: Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: ci.yml
src/: cli.rs  config.rs  main.rs  prayertime.rs
