[package]
name = "malaysia-prayertimes"
version = "0.1.1"
authors = ["Luqmanul Hakim <saya789.mn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "praytime"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = {version = "1.0.125", features = ["derive"]}
serde_json = "1.0"
chrono = "0.4.19"
clap = "2"
