[package]
name = "malaysia-prayertimes"
version = "0.1.1"
authors = ["Luqmanul Hakim <saya789.mn@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "praytime"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
etcetera = { version = "0.10" }
eyre = "0.6"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.27", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = { version = "0.9" }

